[project]
name = "QproCommanderTemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Qpro"]

[tool.poetry]
name = "QproCommanderTemplate"
version = "0.1.0"
description = "your pypi lib description"
authors = ["Rhythmicc <rhythmlian.cn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
qpro = "^0.12.22"

[tool.poetry.scripts]
QproCommanderTemplate = "QproCommanderTemplate.main:main"

[tool.qpro.config]
build = ""
entry_point = "QproCommanderTemplate/main.py"
executable = "python3 -m QproCommanderTemplate.main"
enable_complete = true

[[tool.qpro.server_targets]]
user = "lianhaocheng"
host = "localhost"
port = 22
path = "/opt/homebrew/lib/python3.11/site-packages/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
